Fixing website width on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,7 @@
   }
 
   .images{
+    max-width: 100vw;
     position: fixed;
     top: 0;
     z-index: -1;
